--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Tip Time</string>
+    <string name="cost_of_serivce">Cost of Serivce</string>
 </resources>
